# csu-vert

./: .gitignore  README.md  output_csv  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
TrainingScripts/: CNNTrainingNotebook.ipynb
src/vert/: cli.py  infer.py  io.py  weights.py
tests/: test_cli_args.py  test_infer.py  test_io.py
