[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "csu-vert"
version = "0.1.0"
description = "Command-line UNet inference on image folders"
readme = "README.md"
license = { text = "CC0" }
authors = [{ name = "Nels Motley" }]
requires-python = ">=3.9"

# ---- Core runtime (torch-free) ----
dependencies = [
  "numpy>=1.24,<3",   # looser & future-safe
  "pillow>=9",
  "tqdm>=4.66",
]

[project.scripts]
csu-vert = "vert.cli:main"

# ---- Optional extras (users pick their runtime) ----
[project.optional-dependencies]
# Install this if you want ONNX inference
onnx = [
  "onnxruntime>=1.17",
]

# Install this if you want TorchScript inference
# NOTE: Leave ranges loose; platform-specific wheels differ.
torch = [
  "torch>=2.3,<3.0",
  "torchvision>=0.18,<1.0",
]

# Convenient “everything” bundle for local devs
all = [
  "onnxruntime>=1.17",
  "torch>=2.3,<3.0",
  "torchvision>=0.18,<1.0",
]

# Dev/test tools (no torch here; CI will choose extras per job)
dev = [
  "pytest>=7.0",
  "pytest-cov>=4",
  "ruff>=0.5",
  "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vert"]

[tool.pytest.ini_options]
testpaths = ["tests"]
